<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/vehiclesFragment"
        android:icon="@drawable/ic_list"
        android:contentDescription="@string/cd_list"
        android:title="@string/title_list" />
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_map"
        android:contentDescription="@string/cd_map"
        android:title="@string/title_map" />
</menu>