<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:name="com.george.freenowassessment.ui.VehicleFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:contentDescription="@string/cd_vehicle_list"
    app:layoutManager="LinearLayoutManager"
    tools:context=".ui.fragments.VehiclesFragment"
    tools:listitem="@layout/fragment_vehicle" />